Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3521

Before Impala Network monitor ports start, should not Communication with statetore

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.5.0
    • Impala 2.7.0
    • Backend
    • None

    Description

      ext hs2_port is binded by others process cause impalad exit , but before this impalad already registed to statestore , this node had been join query , query always exception with impala not ready for query ( our cluster use Process monitoring program , cause impala Always restart)

      In my opinion impalad should promise local service start normal , then Registering information to statetore 。 participating in the distributed queries

      the code in impalad-main.cc

      should like this

      // this blocks until the beeswax and hs2 servers terminate
      ABORT_IF_ERROR(beeswax_server->Start());
      ABORT_IF_ERROR(hs2_server->Start());
      ABORT_IF_ERROR(be_server->Start());

      Status status = exec_env.StartServices();
      if (!status.ok())

      { LOG(ERROR) << "Impalad services did not start correctly, exiting. Error: " << status.GetDetail(); ShutdownLogging(); exit(1); }

      Attachments

        Activity

          People

            anujphadke Anuj Phadke
            fish0515_impala_49b1 fishing
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: